mejorando seo y buenas practicas

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Burger Anteux</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Autor: M. Alloza y D. González. E-commerce para el restaurante Burger Anteux">
   <link rel="icon" type="image/x-icon" href="assets/LOGO NEGRO.png">
   <script src="https://kit.fontawesome.com/0dd31d40e8.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
