--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Autor: M. Alloza y D. González. E-commerce para el restaurante Burger Anteux">
-  <link rel="image" type="image/x-icon" href="assets/products/LOGO NEGRO.webp">
+  <link rel="shortcut icon" type="image/x-icon" href="logonegro.webp">
   <script src="https://kit.fontawesome.com/0dd31d40e8.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
